<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:weightSum="3">
    <TextView
        android:id="@+id/bookTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="left"
        android:layout_weight="1"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/bookAuthorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/bookRateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:gravity="right"
        android:layout_weight="1"
        android:layout_gravity="center" />

</LinearLayout>